fixed styling issues around inputs in PT modal, also updated the input component to correctly not jump when focused

--- a/src/modules/modal/components/modal-participate/modal-participate.styles.less
+++ b/src/modules/modal/components/modal-participate/modal-participate.styles.less
@@ -32,6 +32,11 @@
   }
 }
 
+.ModalParticipate__error-section {
+  height: @font-size-large;
+  line-height: @font-size-large;
+}
+
 .ModalParticipate__error {
   color: @color-red;
   display: inline-flex;
@@ -46,9 +51,9 @@
   }
 }
 
-.ModalParticipate__error--field,
-.ModalParticipate__error--field:focus-within,
-.ModalParticipate__error--field:focus {
+div.ModalParticipate__error--field,
+div.ModalParticipate__error--field:focus-within,
+div.ModalParticipate__error--field:focus {
   .border(true, @border-all, @color-red, @border-width-2);
 }
 
